apps/overlays/kubevirt-cluster-319/prod/external-services/admin/admin-t410.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-admin-t410
spec:
  exportTo: ["."]
  hosts:
    - admin-t410.external-services.mesh.internal
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: http-admin-t410
      protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 192.168.1.91
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: external-admin-t410
spec:
  exportTo: ["."]
  host: admin-t410.external-services.mesh.internal
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          insecureSkipVerify: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-admin-t410
spec:
  parentRefs:
    - name: default-gateway
  hostnames:
    - admin-t410.ccsn.dev
  rules:
    - timeouts:
        request: 0s
      backendRefs:
        - group: networking.istio.io
          kind: Hostname
          name: admin-t410.external-services.mesh.internal
          port: 443
