apps/overlays/kubevirt-cluster-319/prod/external-services/admin/omv-netdata.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-omv-netdata
spec:
  exportTo: ["."]
  hosts:
    - omv-netdata.external-services.mesh.internal
  location: MESH_EXTERNAL
  ports:
    - number: 19999
      name: http-netdata
      protocol: HTTP
  resolution: DNS
  endpoints:
    - address: openmediavault.local
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-omv-netdata
spec:
  parentRefs:
    - name: default-gateway
  hostnames:
    - 1002netdata.ccsn.dev
  rules:
    - backendRefs:
        - group: networking.istio.io
          kind: Hostname
          name: omv-netdata.external-services.mesh.internal
          port: 19999
