apps/overlays/kubevirt-cluster-319/prod/external-services/admin/portainer.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-portainer
spec:
  exportTo: ["."]
  hosts:
    - portainer.external-services.mesh.internal
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: http-portainer
      protocol: HTTP
  resolution: DNS
  endpoints:
    - address: portainer-direct.local
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: external-portainer
spec:
  exportTo: ["."]
  host: portainer.external-services.mesh.internal
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          sni: portainer-direct.local
          insecureSkipVerify: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-portainer
spec:
  parentRefs:
    - name: default-gateway
  hostnames:
    - portainer.ccsn.dev
  rules:
    - timeouts:
        request: 0s
      backendRefs:
        - group: networking.istio.io
          kind: Hostname
          name: portainer.external-services.mesh.internal
          port: 443
