apps/overlays/kubevirt-cluster-319/prod/external-services/admin/pve-netdata.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-pve-netdata
spec:
  exportTo: ["."]
  hosts:
    - pve-netdata.external-services.mesh.internal
  location: MESH_EXTERNAL
  ports:
    - number: 19999
      name: http-netdata
      protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 192.168.1.103
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-pve-netdata
spec:
  parentRefs:
    - name: default-gateway
  hostnames:
    - 1003netdata.ccsn.dev
  rules:
    - backendRefs:
        - group: networking.istio.io
          kind: Hostname
          name: pve-netdata.external-services.mesh.internal
          port: 19999
