apps/overlays/kubevirt-cluster-319/prod/external-services/admin/pve.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-pve
spec:
  exportTo: ["."]
  hosts:
    - pve.external-services.mesh.internal
  location: MESH_EXTERNAL
  ports:
    - number: 8006
      name: http-pve
      protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 192.168.1.103
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: external-pve
spec:
  exportTo: ["."]
  host: pve.external-services.mesh.internal
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8006
        tls:
          mode: SIMPLE
          insecureSkipVerify: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-pve
spec:
  parentRefs:
    - name: default-gateway
  hostnames:
    - pve.ccsn.dev
  rules:
    - timeouts:
        request: 0s
      backendRefs:
        - group: networking.istio.io
          kind: Hostname
          name: pve.external-services.mesh.internal
          port: 8006
